[package]
name = "byz_time"
version = "0.1.0"
edition = "2024"
# default-run = "byz_cascading_quorum"
default-run = "byz_cascading_quorum_v2"

[dependencies]
chrono = "0.4.44"
num-bigint = "0.4.6"
rand_0_8_5 = { package = "rand", version = "0.8.5" }
rand_0_9_2 = { package = "rand", version = "0.9.2" }
sha2 = "0.10.9"
libp2p = { version = "0.53.0", features = ["gossipsub", "kad", "autonat", "identify", "mdns", "tcp", "quic", "websocket", "macros"] }
tokio = { version = "1.0", features = ["full"] }
# byz_cascading_quorum = { path = "." }

[[bin]]
name = "byz_cascading_quorum"
path = "src/bin/byz_cascading_quorum.rs"

[[bin]]
name = "byz_cascading_quorum_v2"
path = "src/bin/byz_cascading_quorum_v2.rs"

[[bin]]
name = "byz_time"
path = "src/bin/byz_time.rs"

[[bin]]
name = "utc_consensus"
path = "src/bin/utc_consensus.rs"

[[bin]]
name = "p2p_node"
path = "src/bin/p2p_node.rs"

[lib]
name = "byz_time"
path = "src/lib/mod.rs"
