[package]
name = "byz_time"
version = "0.1.0"
edition = "2024"
default-run = "byz_time"

[lib]
name = "byz_time"
path = "src/lib/mod.rs"

[[bin]]
name = "byz_cascading_quorum"
path = "src/bin/byz_cascading_quorum.rs"

[[bin]]
name = "byz_cascading_quorum_v2"
path = "src/bin/byz_cascading_quorum_v2.rs"

[[bin]]
name = "byz_time"
path = "src/bin/byz_time.rs"

[[bin]]
name = "utc_consensus"
path = "src/bin/utc_consensus.rs"

[[bin]]
name = "p2p_node"
path = "src/bin/p2p_node.rs"

[dependencies]
chrono = "0.4.44"
sha2 = "0.10.9"
## TODO REPLACE libp2p-noise = "0.45.0"
## TODO REPLACE libp2p-core = "0.42.0"
## TODO REPLACE libp2p = { version = "0.53.0", features = ["gossipsub", "kad", "autonat", "identify", "mdns", "tcp", "quic", "websocket", "macros", "dns", "yamux", "tokio"] }
libp2p = { version = "0.54.1", features = [
  "async-std",
  "autonat",
  "cbor",
  "dns",
  "gossipsub",
  "identify",
  "kad",
  "macros",
  "mdns",
  "noise",
  "ping",
  "quic",
  "relay",
  "rendezvous",
  "request-response",
  "tcp",
  "tokio",
  "yamux",
  "websocket"
] }
libp2p-quic = { version = "^0.12", features = ["async-std"] }
libp2p-tls = "^0.6" ##TODO check graph and compatibility


num-bigint = "0.4.6"
rand_0_8_5 = { package = "rand", version = "0.8.5" }
rand_0_9_2 = { package = "rand", version = "0.9.2" }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
multistream-select = "0.13.0"

